--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-SRA 221 Course Home Page
-Welcome to SRA 221
+<html>
+<head> <title> SRA 221 Course Home Page</title></head>
+<body>
+<h1>Welcome to SRA 221</h1>
+
+</body>
+</html>
